Fix alignments of buttons. (#453)
* Fix alignments of buttons.

RT #380

* Fix button size.

RT #380

* Fix button size.

RT #380

* Fix alignment.

RT #380

* Fix alignment of buttons.

RT #453

--- a/frontend/src/components/shared/popUps/organizationModal/organizationModal.scss
+++ b/frontend/src/components/shared/popUps/organizationModal/organizationModal.scss
@@ -128,9 +128,10 @@
     }
   }
   .MuiDialogActions-root {
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 2px;
     margin-bottom: 8px;
+    padding: 20px 42px 20px 30px;
     .cancel-btn {
       background: #efe1ff;
       color: #773cbd;
